Alteração Style da Tela de Login

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,34 +1,36 @@
-<h1>Bem vindo ao ByteBank</h1>
+<div class="login_container">
+  <main>
+    <h1>Bem vindo ao ByteBank</h1>
 
-<main>
-  <form (ngSubmit)="login()">
-    <h4>Login</h4>
 
-    <div>
-      <input
-        type="text"
-        placeholder="Insira a Conta"
-        name="conta"
-        [(ngModel)]="conta"
-      />
-    </div>
-    <div>
-      <input
-        type="text"
-        placeholder="Insira a Agencia"
-        name="agencia"
-        [(ngModel)]="agencia"
-      />
-    </div>
-    <div>
-      <input
-        type="password"
-        placeholder="Insira a Senha"
-        name="senha"
-        [(ngModel)]="senha"
-      />
-    </div>
+    <form (ngSubmit)="login()">
+      <div class="field">
+        <input
+          type="text"
+          placeholder="Insira a Conta"
+          name="conta"
+          [(ngModel)]="conta"
+        />
+      </div>
+      <div class="field">
+        <input
+          type="text"
+          placeholder="Insira a Agencia"
+          name="agencia"
+          [(ngModel)]="agencia"
+        />
+      </div>
+      <div class="field">
+        <input
+          type="password"
+          placeholder="Insira a Senha"
+          name="senha"
+          [(ngModel)]="senha"
+        />
+      </div>
 
-    <button type="submit">Entrar</button>
-  </form>
-</main>
+      <button type="submit">Entrar</button>
+    </form>
+  </main>
+</div>
+
